--- a/login.cfg
+++ b/login.cfg
@@ -1,3 +1,7 @@
 [KeyInfo]
 access = AVkrSuvV2ZvfQLDc67jWxlHRTHAD5zWDRH7JsIAC
 security = FmYDmMJxIukg7m1Hm0PIZNWd5mM8GILleB2WhxWx
+[autolist]
+markets = 비트코인 KRW-BTC , 이터리움 KRW-ETH , 리플 KRW-XRP
+[favlist]
+markets = 비트코인 KRW-BTC , 이터리움 KRW-ETH , 리플 KRW-XRP
