수정함:        aicoin_main.py 	수정함:        login.cfg 	수정함:        main1.ui 	수정함:        upbitApi.py

--- a/login.cfg
+++ b/login.cfg
@@ -2,6 +2,6 @@
 access = AVkrSuvV2ZvfQLDc67jWxlHRTHAD5zWDRH7JsIAC
 security = FmYDmMJxIukg7m1Hm0PIZNWd5mM8GILleB2WhxWx
 [autolist]
-markets = 비트코인 KRW-BTC , 이터리움 KRW-ETH , 리플 KRW-XRP
+markets = 비트코인 KRW-BTC,이더리움 KRW-ETH,리플 KRW-XRP
 [favlist]
-markets = 비트코인 KRW-BTC , 이터리움 KRW-ETH , 리플 KRW-XRP
+markets = 비트코인 KRW-BTC,이더리움 KRW-ETH,리플 KRW-XRP
