수정함:        upbitApi.py

--- a/login.cfg
+++ b/login.cfg
@@ -1,7 +1,10 @@
 [KeyInfo]
 access = AVkrSuvV2ZvfQLDc67jWxlHRTHAD5zWDRH7JsIAC
 security = FmYDmMJxIukg7m1Hm0PIZNWd5mM8GILleB2WhxWx
+
 [autolist]
-markets = 비트코인 KRW-BTC,이더리움 KRW-ETH,리플 KRW-XRP
+markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH', '리플 KRW-XRP', '퀀텀 KRW-QTUM', '스팀 KRW-STEEM', '에이다 KRW-ADA', '스텔라루멘 KRW-XLM']
+
 [favlist]
-markets = 비트코인 KRW-BTC,이더리움 KRW-ETH,리플 KRW-XRP
+markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH', '리플 KRW-XRP', '퀀텀 KRW-QTUM', '스팀 KRW-STEEM', '에이다 KRW-ADA', '스텔라루멘 KRW-XLM']
+
