--- a/login.cfg
+++ b/login.cfg
@@ -5,6 +5,9 @@ security = FmYDmMJxIukg7m1Hm0PIZNWd5mM8GILleB2WhxWx
 [autolist]
 markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH', '리플 KRW-XRP', '퀀텀 KRW-QTUM', '스팀 KRW-STEEM', '에이다 KRW-ADA', '스텔라루멘 KRW-XLM']
 
+[autoact]
+markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH' ]
+
 [favlist]
 markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH', '리플 KRW-XRP', '퀀텀 KRW-QTUM', '스팀 KRW-STEEM', '에이다 KRW-ADA', '스텔라루멘 KRW-XLM']
 
