수정함:        common.py 	수정함:        login.cfg

--- a/login.cfg
+++ b/login.cfg
@@ -11,3 +11,6 @@ markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH' ]
 [favlist]
 markets = ['비트코인 KRW-BTC', '이더리움 KRW-ETH', '리플 KRW-XRP', '퀀텀 KRW-QTUM', '스팀 KRW-STEEM', '에이다 KRW-ADA', '스텔라루멘 KRW-XLM']
 
+[start]
+budget = ['2023-06-01,150000']
+
